[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.


[tool.black]
line-length = 120
target_version = ['py38', 'py37', 'py36']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.tox
    | \.venv
    | dist
    | pip-wheel-metadata
    | samcli/lib/init/templates
    | tests/integration/testdata
  )/
)
'''
